--- a/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/Forms/projeEkleme.resx
+++ b/Asteroid_Project_ManagerAPP/Asteroid_Project_ManagerAPP/Forms/projeEkleme.resx
@@ -2177,7 +2177,7 @@
     <value>2</value>
   </data>
   <data name="button1.Text" xml:space="preserve">
-    <value>proje_resim_ekle</value>
+    <value>Ekle</value>
   </data>
   <data name="&gt;&gt;button1.Name" xml:space="preserve">
     <value>button1</value>
@@ -12113,7 +12113,7 @@
     <value>25</value>
   </data>
   <data name="button5.Text" xml:space="preserve">
-    <value>proje_resim_kaldir</value>
+    <value>kaldır</value>
   </data>
   <data name="&gt;&gt;button5.Name" xml:space="preserve">
     <value>button5</value>
@@ -12132,6 +12132,9 @@
   </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>35</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
